welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:5: error: Int(10) does not take parameters
  else if (a+b==10(b+c) || a+c==10(b+c)){
                  ^blueTicket:5: error: Int(10) does not take parameters
  else if (a+b==10(b+c) || a+c==10(b+c)){
                                  ^